--- a/Customer Interactions/website/Shared/NavMenu.razor
+++ b/Customer Interactions/website/Shared/NavMenu.razor
@@ -17,6 +17,11 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Register
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/menus">
+                <span class="oi oi-menu" aria-hidden="true"></span> Menus
+            </NavLink>
+        </li>
     </ul>
 </div>
 
