Refactored Models to add clarity
- Tried to define the boundaries between Consumed models, Stored Models and reduced copy and paste to help set better practices
- Added library for shared models between Customer Interactions

--- a/Customer Interactions/website/Pages/Menus.razor
+++ b/Customer Interactions/website/Pages/Menus.razor
@@ -1,27 +1,15 @@
 ﻿@page "/menus"
 
 @using mongo.repository
-@using Gamer.Customer.Website.Models
+@using interactions.models
+
 <h3>Menu</h3>
 
 @foreach (var menu in Current)
 {
-    <h5>@menu.Name</h5>
-    <ul>
-        @foreach (var category in menu.Categories)
-        {
-            <li>
-                @category.Name<br />
-                <ul>
-                    @foreach (var item in category.Items)
-                    {
-                        <li>@item.Name&nbsp;&nbsp;@item.Price</li>
-                    }
-                </ul>
-            </li>
-        }
-    </ul>
+    <MenuDisplay Menu="@menu" />
 }
+
 @code {
     [Inject]
     public IRepository Repository { get; set; }
