Refactor out Menus to store menu in database
Removed kafka publish for now so as to store the menu

--- a/Menu/menu-website/Pages/Menus.razor
+++ b/Menu/menu-website/Pages/Menus.razor
@@ -1,7 +1,8 @@
 ﻿@page "/menus"
 @using Confluent.Kafka
+@using Gamer.Menu.Application.Commands
 @using Gamer.Menu.Website.Models
-@using Gamer.Menu.Website.Serializers
+@using MediatR
 
 <h3>Menus</h3>
 
@@ -16,47 +17,13 @@
 
 @code {
 
+    [Inject]
+    public IMediator Mediator { get; set; }
+
     public Menu Model { get; set; } = new Menu();
 
     public async Task CreateMenu()
     {
-        var configuration = new Dictionary<string, string>()
-{
-            {"bootstrap.servers", "localhost:9092"}
-        };
-
-        using var producer = new ProducerBuilder<Guid, Menu>(configuration)
-            .SetKeySerializer(new GuidKeySerializer())
-            .SetValueSerializer(new JsonValueSerializer<Menu>()).Build();
-
-        await producer.ProduceAsync("menus", new Message<Guid, Menu>()
-        {
-            Key = Guid.NewGuid(),
-            Value = new Menu
-            {
-                Name = Model.Name,
-                Categories = new[]
-                {
-                    new Category()
-                    {
-                        Name = "Appetizers", Items = new[]
-                        {
-                            new Item() {Name = "Mozzarella Sticks", Price = 9.99},
-                            new Item() {Name = "Garlic Bread", Price = 6.99},
-                            new Item() {Name = "Wings", Price = 12.99},
-                        }
-                    },
-                    new Category()
-                    {
-                        Name = "Pizzas", Items = new[]
-                        {
-                            new Item() {Name = "Cheese", Price = 9.99},
-                            new Item() {Name = "Pepperoni", Price = 10.99},
-                            new Item() {Name = "Ham & Pineapple", Price = 19.99},
-                        }
-                    },
-                }
-            }
-        });
+        await Mediator.Send(new CreateMenu() { Name = Model.Name });
     }
 }
