--- a/Menu/menu-website/Shared/NavMenu.razor
+++ b/Menu/menu-website/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">menu-website</a>
+    <a class="navbar-brand" href="">Menu Service</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,8 +13,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="menus" Match="NavLinkMatch.All">
-                <span class="oi oi-basket" aria-hidden="true"></span> Menus
+            <NavLink class="nav-link" href="menueditor" Match="NavLinkMatch.All">
+                <span class="oi oi-basket" aria-hidden="true"></span> Menu Editor
             </NavLink>
         </li>
     </ul>
