removed automapper reverted migration added migration with default value for uid created CreateAndAssociateCategoryWithMenu command created CreateAndAssociateItemWithCategory command changed ui to use new commands fixed placeholder for create item ui created validation for create menu (min-length:3, maxlength:20, can't be null) created a component that shows validation errors

--- a/Menu/menu-website/Pages/MenuEditor/Categories/Categories.razor
+++ b/Menu/menu-website/Pages/MenuEditor/Categories/Categories.razor
@@ -1,7 +1,6 @@
 ﻿@page "/menueditor/categories"
 @using Gamer.Menu.Website.Pages.MenuEditor
 @using Gamer.Menu.Core
-@using AutoMapper
 @using Gamer.Menu.Website.Models
 @using Gamer.Menu.Website.Pages.MenuEditor.Categories
 @inject NavigationManager UriHelper
@@ -18,14 +17,16 @@
 @code {
     [Inject]
     public IApplicationContext Context { get; set; }
-    [Inject]
-    public IMapper Mapper { get; set; }
 
     public List<Category> CategoriesList { get; set; }
 
     protected override void OnInitialized()
     {
-        CategoriesList = Context.Categories.Select(c => Mapper.Map<Category>(c)).ToList();
+        CategoriesList = Context.Categories.Select(c => new Category
+        {
+            UID = c.UID,
+            Name = c.Name
+        }).ToList();
     }
 
     public void AddClicked()
