--- a/Menu/menu-website/Pages/MenuEditor/Categories/CreateCategoryPage.razor
+++ b/Menu/menu-website/Pages/MenuEditor/Categories/CreateCategoryPage.razor
@@ -8,17 +8,15 @@
 @using Microsoft.EntityFrameworkCore.Internal
 @using Microsoft.EntityFrameworkCore.Metadata
 @using Gamer.Menu.Website.Pages.Components
-@using AutoMapper
 
 @inject NavigationManager UriHelper
 
 <EditForm Model="Model" OnValidSubmit="CreateCategory">
     <InputText @bind-Value="Model.Name" placeholder="Category Name" />
-    <CheckboxList 
-        Data="@Menus" 
-        TextField="@((item)=>item.Name)" 
-        ValueField="@((item)=>item.UID)" 
-        SelectedValues="@SelectedMenus" />
+    <CheckboxList Data="@Menus"
+                  TextField="@((item)=>item.Name)"
+                  ValueField="@((item)=>item.UID)"
+                  SelectedValues="@SelectedMenus" />
     <button class="btn btn-primary">Save</button>
 </EditForm>
 
@@ -27,8 +25,6 @@
     public IApplicationContext Context { get; set; }
     [Inject]
     public IMediator Mediator { get; set; }
-    [Inject]
-    public IMapper Mapper { get; set; }
 
     public List<Menu> Menus { get; set; }
     public List<string> SelectedMenus { get; set; } = new List<string>();
@@ -37,23 +33,20 @@
 
     public async Task CreateCategory()
     {
-        var categoryUid = await Mediator.Send(new CreateCategory()
+        await Mediator.Send(new CreateAndAssociateCategoryWithMenu
         {
             Name = Model.Name,
+            MenuIds = SelectedMenus.Select(Guid.Parse).ToList()
         });
-        if (SelectedMenus.Any())
-        {
-            await Mediator.Send(new AssociateCategoryWithMenu
-            {
-                CategoryUID = categoryUid,
-                MenuUIDS = SelectedMenus.Select(m => Guid.Parse(m))
-            });
-        }
         UriHelper.NavigateTo("/menueditor/categories");
     }
 
     protected override void OnInitialized()
     {
-        Menus = Context.Menus.Select(m => Mapper.Map<Menu>(m)).ToList();
+        Menus = Context.Menus.Select(m => new Menu
+        {
+            UID = m.UID,
+            Name = m.Name
+        }).ToList();
     }
 }
