--- a/Menu/menu-website/Pages/MenuEditor/Items/CreateItemPage.razor
+++ b/Menu/menu-website/Pages/MenuEditor/Items/CreateItemPage.razor
@@ -3,15 +3,14 @@
 @using Gamer.Menu.Application.Commands
 @using MediatR
 @using Gamer.Menu.Website.Pages.Components
-@using AutoMapper
 @using Gamer.Menu.Core
 
 @inject NavigationManager UriHelper
 
 <EditForm Model="Model" OnValidSubmit="CreateItem">
-    <InputText @bind-Value="Model.Name" placeholder="Menu Name" />
-    <InputText @bind-Value="Model.Description" placeholder="Menu Description" />
-    <InputNumber @bind-Value="Model.Price" placeholder="Menu Price" />
+    <InputText @bind-Value="Model.Name" placeholder="Item Name" />
+    <InputText @bind-Value="Model.Description" placeholder="Item Description" />
+    <InputNumber @bind-Value="Model.Price" placeholder="Item Price" />
     <CheckboxList Data="@Categories"
                   TextField="@((item)=>item.Name)"
                   ValueField="@((item)=>item.UID)"
@@ -25,8 +24,6 @@
     public IApplicationContext Context { get; set; }
     [Inject]
     public IMediator Mediator { get; set; }
-    [Inject]
-    public IMapper Mapper { get; set; }
 
     public List<Category> Categories { get; set; }
     public List<string> SelectedCategories { get; set; } = new List<string>();
@@ -35,26 +32,24 @@
 
     public async Task CreateItem()
     {
-        var itemUID = await Mediator.Send(new CreateItem()
+        await Mediator.Send(new CreateAndAssociateItemWithCategory
         {
             Name = Model.Name,
             Description = Model.Description,
-            Price = Model.Price
+            Price = Model.Price,
+
+            CategoryIds = SelectedCategories.Select(Guid.Parse).ToList()
         });
-        if (SelectedCategories.Any())
-        {
-            await Mediator.Send(new AssociateItemWithCategory()
-            {
-                ItemUID = itemUID,
-                CategoryUIDS = SelectedCategories.Select(m => Guid.Parse(m))
-            });
-        }
         UriHelper.NavigateTo("/menueditor/items");
     }
 
     protected override void OnInitialized()
     {
-        Categories = Context.Categories.Select(c => Mapper.Map<Category>(c)).ToList();
+        Categories = Context.Categories.Select(c => new Category
+        {
+            UID = c.UID,
+            Name = c.Name,
+        }).ToList();
     }
 
 }
