--- a/Menu/menu-website/Pages/MenuEditor/Menus/MenuList.razor
+++ b/Menu/menu-website/Pages/MenuEditor/Menus/MenuList.razor
@@ -1,4 +1,5 @@
-﻿<table class="table">
+﻿@using System.Security.Policy
+<table class="table">
     <thead>
         <tr>
             <th scope="col">Name</th>
@@ -15,7 +16,7 @@
                         <td>
                             <button>Edit</button>
                             <button>Delete</button>
-                            <button>Publish</button>
+                            <button disabled="@(!menu.CanBePublished)" @onclick="() => Publish(menu.Uid)">Publish</button>
                         </td>
                     </tr>
                 }
@@ -32,4 +33,9 @@
 @code {
     [Parameter]
     public IEnumerable<MenuViewModel> Menus { get; set; }
+
+    public async Task Publish(Guid id)
+    {
+        await Task.CompletedTask;
+    }
 }
